add mapper & update for trainings, subscriptions